# Scylla

./: .gitignore  ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DesignDecisions.md  NOTICE  README.md  RECOMMENDATIONS.md  SECURITY.md  SprintPlanning.md  THREAT-MODEL.md
.github/workflows/: ci.yml  fuzz.yml  release.yml
crates/scylla-cli/: Cargo.toml
crates/scylla-cli/src/: main.rs
crates/scylla-cli/tests/: conformance.rs  diff.rs  inspect.rs  merge.rs
crates/scylla-engine/: Cargo.toml  build.rs
crates/scylla-engine/examples/: probe.rs
crates/scylla-engine/proto/: engine.proto
crates/scylla-engine/src/: job.rs  lib.rs
crates/scylla-graphql/: Cargo.toml
crates/scylla-graphql/src/: main.rs  schema.rs
crates/scylla-graphql/tests/: api.rs  conformance.rs
crates/scylla-http/: Cargo.toml
crates/scylla-http/src/: main.rs
crates/scylla-http/tests/: api.rs  conformance.rs  tls.rs
crates/scylla-ingest/: Cargo.toml
crates/scylla-ingest/src/: lib.rs  main.rs
crates/scylla-lsp/: Cargo.toml
crates/scylla-lsp/src/: lib.rs  main.rs
crates/scylla-lsp/tests/: conformance.rs
crates/scylla-mcp/: Cargo.toml
crates/scylla-mcp/src/: lib.rs  main.rs
crates/scylla-mcp/tests/: conformance.rs
crates/scylla-merge/: Cargo.toml
crates/scylla-merge/src/: lib.rs
crates/scylla-merge/tests/: reanchor_gate.rs
crates/scylla-model/: Cargo.toml
crates/scylla-model/src/: lib.rs
crates/scylla-port/: Cargo.toml
crates/scylla-port/src/: lib.rs
crates/scylla-rpc/: Cargo.toml  build.rs
crates/scylla-rpc/schema/: scylla_rpc.capnp
crates/scylla-rpc/src/: lib.rs
crates/scylla-rpc/tests/: conformance.rs  remote.rs  tls.rs
crates/scylla-schema/: Cargo.toml  build.rs
crates/scylla-schema/schema/: model.capnp
crates/scylla-schema/src/: lib.rs
crates/scylla-serve/: Cargo.toml  README.md
crates/scylla-serve/src/: main.rs
crates/scylla-serve/tests/: serve.rs
crates/scylla-tui/: Cargo.toml
crates/scylla-tui/src/: app.rs  lib.rs  main.rs  ui.rs
crates/scylla-tui/tests/: conformance.rs
crates/scylla-wasm/: Cargo.toml  README.md  build.sh
crates/scylla-wasm/examples/: gen_sample.rs
crates/scylla-wasm/src/: lib.rs
crates/scylla-wasm/web/: index.html  mathlib_annotated.scylla  mathlib_patched.scylla  mathlib_rebuilt.scylla  scylla_wasm.wasm  verify.mjs
docs/: before-gayhydra-architecture.drawio  corpus-findings.md  eval-dynamic-analysis-producer.md  proposed-scylla-architecture.drawio
engine-service/: .dockerignore  Dockerfile  build.gradle  run-sandboxed.sh  settings.gradle
engine-service/scripts/: ScyllaModel.java  dump_model.java
engine-service/src/main/java/dev/scylla/engine/: EngineServer.java
engine-service/warm-worker/: ScyllaBsim.java  ScyllaWarmWorker.java
fuzz/: Cargo.toml
fuzz/fuzz_targets/: artifact_loader.rs  mcp_dispatch.rs  snapshot_ingest.rs
prototype/: .gitignore  README.md  REPORT.md
prototype/corpus/: make_corpus.sh
prototype/corpus/src/: gomath.go  mathlib.c  mathlib_v2.c  shapes.cpp  strutil.c
prototype/harness/: dump_model.java  materialize.sh  reanchor.py  snapshot.sh
prototype/snapshots/: mathlib.aarch64.O0.json  mathlib.i386.O0.json  mathlib.i386.O2.json  mathlib.x86-64.O0.json  mathlib.x86-64.O2.json  mathlib_v2.aarch64.O0.json  mathlib_v2.i386.O0.json  mathlib_v2.x86-64.O0.json  mathlib_v2.x86-64.O2.json  shapes.x86-64.O0.json  strutil.aarch64.O0.json  strutil.i386.O0.json  strutil.i386.O2.json  strutil.x86-64.O0.json  strutil.x86-64.O2.json
scripts/: check-wasm.sh
spike/bsim/: SPIKE-REPORT.md  ScyllaBsimSpike.java  run-spike.sh
spike/dynamic-analysis/: Cargo.toml  HARNESS-BUILD-PLAN.md  HARNESS-M5-PLAN.md  HARNESS-STATUS.md  HARNESS-THREAT-MODEL.md  SPIKE-REPORT.md  run-spike.sh  runtime-iat.json
spike/dynamic-analysis/harness-m1/: M1-REDTEAM-REPORT.md  M1-REPORT.md  m1-microvm.sh  m1-redteam.sh
spike/dynamic-analysis/harness-m2/: M2-REPORT.md  m2-channel.sh
spike/dynamic-analysis/harness-m3/: M3-REPORT.md  m3-frame.c  m3-observe.sh  sample.c
spike/dynamic-analysis/harness-m4/: M4-REPORT.md  m4-producer.sh
spike/dynamic-analysis/harness-m5/: M5_0-REPORT.md  M5_1-PACKED-FINDING.md  M5_1-REPORT.md  M5_2-PERSIST-REPORT.md  M5_2-REPORT.md  M5_3-ANTIANALYSIS-FINDING.md  M5_3-BEACON-REPORT.md  M5_3-PERSISTENCE-REPORT.md  M5_3-SYSCALL-REPORT.md  m5_0-firecracker.sh  m5_0-redteam.sh  m5_1-observe.sh  m5_1-packed.sh  m5_2-persist.sh  m5_2-uplift.sh  m5_3-antianalysis.sh  m5_3-beacon.sh  m5_3-persistence.sh  m5_3-syscall.sh
spike/dynamic-analysis/src/: channel.rs  harness.rs  main.rs
spike/go-producer/: SPIKE-REPORT.md  measure_callee_anchor.py  run-spike.sh
spike/rpc-shape/: Cargo.toml  SPIKE-REPORT.md  build.rs
spike/rpc-shape/schema/: port.capnp
spike/rpc-shape/src/: main.rs
spike/vt/: SPIKE-REPORT.md  ScyllaVtSpike.java
spike/warm-engine/: SPIKE-REPORT.md  Spike.java  Worker.java  run-spike.sh
