# Scylla — durable RE core (DD-016: Rust). Workspace root.
[workspace]
resolver = "2"
members = [
    "crates/scylla-model",
    "crates/scylla-schema",
    "crates/scylla-ingest",
    "crates/scylla-merge",
    "crates/scylla-port",
    "crates/scylla-mcp",
    "crates/scylla-engine",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Aaron K. Clark <cryptojones@owasp.org>"]
