# Scylla — durable RE core (DD-016: Rust). Workspace root.
[workspace]
resolver = "2"
members = [
    "crates/scylla-model",
    "crates/scylla-schema",
    "crates/scylla-ingest",
    "crates/scylla-merge",
    "crates/scylla-port",
    "crates/scylla-mcp",
    "crates/scylla-engine",
    "crates/scylla-cli",
    "crates/scylla-wasm",
    "crates/scylla-serve",
    "crates/scylla-rpc",
    "crates/scylla-http",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Aaron K. Clark <cryptojones@owasp.org>"]
