[package]
name = "scylla-cli"
description = "The Scylla CLI — materialize a binary into the canonical model artifact (DD-009/040), and diff two artifacts (DD-017)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "scylla"
path = "src/main.rs"

[dependencies]
# Composition root: the engine port (gRPC producer) + the Cap'n Proto schema (artifact writer).
# Kept OUT of the library crates so neither the port adapter nor the WASM consume-side core has
# to carry the other's dependency (DD-002: two IDLs by design).
scylla-engine = { path = "../scylla-engine" }
scylla-schema = { path = "../scylla-schema" }
# The client port, for the offline `diff` verb (DD-017) — no engine, just two artifacts in.
scylla-port = { path = "../scylla-port" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
