[package]
name = "scylla-cli"
description = "The Scylla CLI — materialize a binary into the canonical model artifact (DD-009/040), diff two artifacts, and inspect one (info/functions/view/callers) — DD-017."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "scylla"
path = "src/main.rs"

[dependencies]
# Composition root: the engine port (gRPC producer) + the Cap'n Proto schema (artifact writer).
# Kept OUT of the library crates so neither the port adapter nor the WASM consume-side core has
# to carry the other's dependency (DD-002: two IDLs by design).
scylla-engine = { path = "../scylla-engine" }
scylla-schema = { path = "../scylla-schema" }
# The client port, for the offline `diff`/`view`/`callers` verbs (DD-017) — no engine, just artifacts in.
scylla-port = { path = "../scylla-port" }
# The model, for naming stable ids (`view`/`callers` take a StableId).
scylla-model = { path = "../scylla-model" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
