[package]
name = "scylla-engine"
description = "The engine port (DD-009/040): gRPC client for the sandboxed JVM engine-as-service."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
scylla-model = { path = "../scylla-model" }
# Unix-domain-socket transport for the no-egress sandbox (DD-034 GAP-1): a custom tonic connector
# over a UnixStream, so the engine container can run with `--network none`.
tower = { version = "0.5", features = ["util"] }
hyper-util = "0.1"

[build-dependencies]
tonic-build = "0.12"
