[package]
name = "scylla-schema"
description = "Scylla canonical serialization — Cap'n Proto model artifact (DD-002/026)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
capnp = "0.26"
scylla-model = { path = "../scylla-model" }

[build-dependencies]
capnpc = "0.26"
